chore: add v1.0.8 release entry to changelog
